# ml-idl

./: Makefile.in  configure.ac  install-sml-wrapper.sh
config/: smlnj-version.sml
src/: ATTRIBUTES  Makefile.in  sources.cm  sources_cm.in
src/IIL/: idl-translate.sml  iil.sml
src/Main/: error.sml  main.sml  options.sml  sources.cm  sources_cm.in  verbose.sml
src/Main/OLD/: main.sml
src/Parser/: idl-exn-sig.sml  idl-parser-sig.sml  idl-parser.sml  idl-pt-sig.sml  idl.grm  idl.grm.desc  idl.grm.sig  idl.grm.sml  idl.lex  idl.lex.sml
src/Parser/old-fred-based/: idl-exn.sml  idl-pt-sig.sml  idl.frd  idl.grm  idl.lex  idl.lex.sml
src/TargetHeader/: generate-header.sml
src/TargetMoby/: generate-mbx.sml  sources.cm  sources_cm.in
src/TargetSMLNJ/: generate-sml-fn.sml
src/TargetSMLNJ-RT/: generate-runtime.sml
src/TargetSMLNJ-RT-Classic/: generate-runtime.sml
src/Util/: generate-sml-util.sml
src/tmp/: smlnj-runtime-lib.c  smlnj-runtime-lib.hxx
tests/: Makefile  Makefile.in  RESTRICTIONS  build-ml  config.cache  config.status  configure.in  ml-build
tests/NCurses/life/: life.sml
tests/NCurses/ncurses/: ncurses.idl
tests/config/: check_smlnj.m4  check_smlnj_heap_suffix.m4
tests/sml-basis/: sml-basis.idl
trunk/: TODO  configure.ac
trunk/config/: check_smlnj.m4  check_smlnj_heap_suffix.m4  install-sml-wrapper_sh.in
trunk/src/: Makefile.in  sources.cm  sources_cm.in
trunk/src/IIL/: concrete-sig.sml  idl-translate.sml  iil.sml
trunk/src/Main/: error.sml  main.sml  options.sml  sources.cm  sources_cm.in  targets_sml.in
trunk/src/Parser/: idl-pt.sml  idl.grm  idl.grm.desc  idl.grm.sig  idl.grm.sml  idl.lex.sml
trunk/src/Parser/old-fred-based/: idl-parser.sml  idl-pt.sml  idl.cm  idl.grm.desc  idl.grm.sig  idl.grm.sml
trunk/src/TargetHeader/: generate-header-fn.sml  generate-header.sml
trunk/src/TargetSMLNJ/: concrete-runtime.sml  generate-sml-fn.sml  generate-smlnj.sml
trunk/src/TargetSMLNJ-RT/: generate-runtime-glue.sml  generate-runtime.sml
trunk/src/TargetSMLNJ-RT-Classic/: generate-runtime-glue.sml
trunk/src/Util/: util.sml
trunk/src/tmp/: cfun-list.h  cfun-proto-list.h  sml-basis-lib.c  sml-basis-lib.hxx  sml-basis.c  sml-basis.h  sml-basis.idl  smlnj-runtime.c  smlnj-runtime.h
trunk/tests/: configure  ml-idl
trunk/tests/NCurses/life/: sources.cm
trunk/tests/moby-tests/: test.idl  test.mbx
